force-app/main/default/objects/Dev_Task__c/Dev_Task__c.object-meta.xml
<CustomObject>
    <description>Learning-lab custom object for the Salesforce Dev I & II RoadMap.</description>
    <label>Dev Task</label>
    <nameField>
        <label>Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dev Tasks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>