force-app/main/default/objects/Dev_Task__c/fields/Focus_Area__c.field-meta.xml
<CustomField>
    <fullName>Focus_Area__c</fullName>
    <label>Focus Area</label>
    <length>255</length>
    <type>Text</type>
</CustomField>