force-app/main/default/objects/Dev_Task__c/validationRules/Due_Date_In_Future.validationRule-meta.xml
<ValidationRule>
    <active>true</active>
    <description>Due date must be today or in the future.</description>
    <errorConditionFormula>ISNEW() &amp;&amp; Due_Date__c &lt; TODAY()</errorConditionFormula>
    <errorDisplayField>Due_Date__c</errorDisplayField>
    <errorMessage>Due Date must be today or in the future.</errorMessage>
</ValidationRule>